// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sxib16r {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxib16rmbqqh--size-md {
  height: var(--sx-sizes-2);
  width: var(--sx-sizes-2);
}

.sxib16r-yd47z {
  margin-left: var(--sx-space-2);
}

.sx03kze-e0n2q {
  opacity: 0;
  transition: opacity 150ms;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-c4y3k {
  justify-content: center;
  opacity: 1;
  position: absolute;
  transition: opacity 150ms;
}

.sxe5oww {
  animation-name: sxwho2l;
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  background-color: currentColor;
  border-radius: var(--sx-radii-round);
}

.sxe5oww:nth-child(1) {
  animation-delay: -300ms;
}

.sxe5oww:nth-child(2) {
  animation-delay: -150ms;
}

.sxe5oww:nth-child(3) {
  animation-delay: 0;
}

.sxe5oww4btw3--size-md {
  height: 6px;
  width: 6px;
  margin-left: 2px;
  margin-right: 2px;
}

.sxc9pi1 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-sans);
  font-weight: 500;
  justify-content: center;
  letter-spacing: 0.02em;
  line-height: 1.4;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxc9pi1[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxc9pi1fz3et--size-md {
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-4);
  padding-right: var(--sx-space-4);
}

.sxc9pi1lmkcj--isRounded-true {
  border-radius: var(--sx-radii-round);
}

.sxc9pi1h1fyd--isLoading-true {
  cursor: not-allowed;
  opacity: 0.5;
  pointer-events: none;
}

.sxc9pi1idshx--c2 {
  background: var(--sx-colors-primary500);
  color: white;
}

.sxc9pi1idshx--c2:not([disabled]):hover,
.sxc9pi1idshx--c2:not([disabled]):focus {
  background: var(--sx-colors-primary900);
  color: white;
}

.sxc9pi1idshx--c2:active {
  background: var(--sx-colors-primary500);
}

.sxc9pi1idshx--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxc9pi1zvt14--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-primary500);
  background: white;
}

.sxc9pi1zvt14--c2:not([disabled]):hover,
.sxc9pi1zvt14--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primary900);
  background: white;
}

.sxc9pi1zvt14--c2:active {
  color: var(--sx-colors-primary500);
}

.sxc9pi1zvt14--c2[disabled] {
  background: white;
  color: var(--sx-colors-primary900);
}

.sxc9pi11yr1x--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-secondary500);
  background: white;
}

.sxc9pi11yr1x--c2:not([disabled]):hover,
.sxc9pi11yr1x--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-secondary900);
  background: white;
}

.sxc9pi11yr1x--c2:active {
  color: var(--sx-colors-secondary500);
}

.sxc9pi11yr1x--c2[disabled] {
  background: white;
  color: var(--sx-colors-secondary900);
}

<div>
  <button
    class="sxc9pi1 sxc9pi103kze--theme-primary sxc9pi103kze--appearance-solid sxc9pi1fz3et--size-md sxc9pi1h1fyd--isLoading-true sxc9pi1idshx--c2"
    type="button"
  >
    <div
      class="sx2cs53 sx2cs53-c4y3k"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
    </div>
    <span
      class="sx03kze sx03kze-e0n2q"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
.sxc9pi1 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-sans);
  font-weight: 500;
  justify-content: center;
  letter-spacing: 0.02em;
  line-height: 1.4;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxc9pi1[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxc9pi1fz3et--size-md {
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-4);
  padding-right: var(--sx-space-4);
}

.sxc9pi1idshx--c2 {
  background: var(--sx-colors-primary500);
  color: white;
}

.sxc9pi1idshx--c2:not([disabled]):hover,
.sxc9pi1idshx--c2:not([disabled]):focus {
  background: var(--sx-colors-primary900);
  color: white;
}

.sxc9pi1idshx--c2:active {
  background: var(--sx-colors-primary500);
}

.sxc9pi1idshx--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

<div>
  <button
    class="sxc9pi1 sxc9pi103kze--theme-primary sxc9pi103kze--appearance-solid sxc9pi1fz3et--size-md sxc9pi1idshx--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a button with an icon 1`] = `
.sxib16r {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxib16rmbqqh--size-md {
  height: var(--sx-sizes-2);
  width: var(--sx-sizes-2);
}

.sxib16r-yd47z {
  margin-left: var(--sx-space-2);
}

.sxc9pi1 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-sans);
  font-weight: 500;
  justify-content: center;
  letter-spacing: 0.02em;
  line-height: 1.4;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxc9pi1[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxc9pi1fz3et--size-md {
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-4);
  padding-right: var(--sx-space-4);
}

.sxc9pi1idshx--c2 {
  background: var(--sx-colors-primary500);
  color: white;
}

.sxc9pi1idshx--c2:not([disabled]):hover,
.sxc9pi1idshx--c2:not([disabled]):focus {
  background: var(--sx-colors-primary900);
  color: white;
}

.sxc9pi1idshx--c2:active {
  background: var(--sx-colors-primary500);
}

.sxc9pi1idshx--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxc9pi1zvt14--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-primary500);
  background: white;
}

.sxc9pi1zvt14--c2:not([disabled]):hover,
.sxc9pi1zvt14--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primary900);
  background: white;
}

.sxc9pi1zvt14--c2:active {
  color: var(--sx-colors-primary500);
}

.sxc9pi1zvt14--c2[disabled] {
  background: white;
  color: var(--sx-colors-primary900);
}

.sxc9pi11yr1x--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-secondary500);
  background: white;
}

.sxc9pi11yr1x--c2:not([disabled]):hover,
.sxc9pi11yr1x--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-secondary900);
  background: white;
}

.sxc9pi11yr1x--c2:active {
  color: var(--sx-colors-secondary500);
}

.sxc9pi11yr1x--c2[disabled] {
  background: white;
  color: var(--sx-colors-secondary900);
}

<div>
  <button
    class="sxc9pi1 sxc9pi103kze--theme-primary sxc9pi103kze--appearance-solid sxc9pi1fz3et--size-md sxc9pi1idshx--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxib16r sxib16rmbqqh--size-md sxib16r-yd47z"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
.sxc9pi1 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-sans);
  font-weight: 500;
  justify-content: center;
  letter-spacing: 0.02em;
  line-height: 1.4;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxc9pi1[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxc9pi1fz3et--size-md {
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-4);
  padding-right: var(--sx-space-4);
}

.sxc9pi1idshx--c2 {
  background: var(--sx-colors-primary500);
  color: white;
}

.sxc9pi1idshx--c2:not([disabled]):hover,
.sxc9pi1idshx--c2:not([disabled]):focus {
  background: var(--sx-colors-primary900);
  color: white;
}

.sxc9pi1idshx--c2:active {
  background: var(--sx-colors-primary500);
}

.sxc9pi1idshx--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxc9pi1zvt14--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-primary500);
  background: white;
}

.sxc9pi1zvt14--c2:not([disabled]):hover,
.sxc9pi1zvt14--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primary900);
  background: white;
}

.sxc9pi1zvt14--c2:active {
  color: var(--sx-colors-primary500);
}

.sxc9pi1zvt14--c2[disabled] {
  background: white;
  color: var(--sx-colors-primary900);
}

<div>
  <button
    class="sxc9pi1 sxc9pi103kze--theme-primary sxc9pi103kze--appearance-solid sxc9pi1fz3et--size-md sxc9pi1idshx--c2"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled secondary outline button 1`] = `
.sxc9pi1 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-sans);
  font-weight: 500;
  justify-content: center;
  letter-spacing: 0.02em;
  line-height: 1.4;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxc9pi1[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxc9pi1fz3et--size-md {
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-4);
  padding-right: var(--sx-space-4);
}

.sxc9pi1idshx--c2 {
  background: var(--sx-colors-primary500);
  color: white;
}

.sxc9pi1idshx--c2:not([disabled]):hover,
.sxc9pi1idshx--c2:not([disabled]):focus {
  background: var(--sx-colors-primary900);
  color: white;
}

.sxc9pi1idshx--c2:active {
  background: var(--sx-colors-primary500);
}

.sxc9pi1idshx--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxc9pi1zvt14--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-primary500);
  background: white;
}

.sxc9pi1zvt14--c2:not([disabled]):hover,
.sxc9pi1zvt14--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primary900);
  background: white;
}

.sxc9pi1zvt14--c2:active {
  color: var(--sx-colors-primary500);
}

.sxc9pi1zvt14--c2[disabled] {
  background: white;
  color: var(--sx-colors-primary900);
}

.sxc9pi11yr1x--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-secondary500);
  background: white;
}

.sxc9pi11yr1x--c2:not([disabled]):hover,
.sxc9pi11yr1x--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-secondary900);
  background: white;
}

.sxc9pi11yr1x--c2:active {
  color: var(--sx-colors-secondary500);
}

.sxc9pi11yr1x--c2[disabled] {
  background: white;
  color: var(--sx-colors-secondary900);
}

<div>
  <button
    class="sxc9pi1 sxc9pi103kze--theme-secondary sxc9pi103kze--appearance-outline sxc9pi1fz3et--size-md sxc9pi11yr1x--c2"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
.sxc9pi1 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-sans);
  font-weight: 500;
  justify-content: center;
  letter-spacing: 0.02em;
  line-height: 1.4;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxc9pi1[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxc9pi1fz3et--size-md {
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-4);
  padding-right: var(--sx-space-4);
}

.sxc9pi1idshx--c2 {
  background: var(--sx-colors-primary500);
  color: white;
}

.sxc9pi1idshx--c2:not([disabled]):hover,
.sxc9pi1idshx--c2:not([disabled]):focus {
  background: var(--sx-colors-primary900);
  color: white;
}

.sxc9pi1idshx--c2:active {
  background: var(--sx-colors-primary500);
}

.sxc9pi1idshx--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxc9pi1zvt14--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-primary500);
  background: white;
}

.sxc9pi1zvt14--c2:not([disabled]):hover,
.sxc9pi1zvt14--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primary900);
  background: white;
}

.sxc9pi1zvt14--c2:active {
  color: var(--sx-colors-primary500);
}

.sxc9pi1zvt14--c2[disabled] {
  background: white;
  color: var(--sx-colors-primary900);
}

<div>
  <button
    class="sxc9pi1 sxc9pi103kze--theme-primary sxc9pi103kze--appearance-outline sxc9pi1fz3et--size-md sxc9pi1zvt14--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a rounded button  1`] = `
.sxib16r {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxib16rmbqqh--size-md {
  height: var(--sx-sizes-2);
  width: var(--sx-sizes-2);
}

.sxib16r-yd47z {
  margin-left: var(--sx-space-2);
}

.sxc9pi1 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-sans);
  font-weight: 500;
  justify-content: center;
  letter-spacing: 0.02em;
  line-height: 1.4;
  padding: unset;
  text-decoration: none;
  transition: all 125ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxc9pi1[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxc9pi1fz3et--size-md {
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-4);
  padding-right: var(--sx-space-4);
}

.sxc9pi1lmkcj--isRounded-true {
  border-radius: var(--sx-radii-round);
}

.sxc9pi1idshx--c2 {
  background: var(--sx-colors-primary500);
  color: white;
}

.sxc9pi1idshx--c2:not([disabled]):hover,
.sxc9pi1idshx--c2:not([disabled]):focus {
  background: var(--sx-colors-primary900);
  color: white;
}

.sxc9pi1idshx--c2:active {
  background: var(--sx-colors-primary500);
}

.sxc9pi1idshx--c2[disabled] {
  background: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal600);
}

.sxc9pi1zvt14--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-primary500);
  background: white;
}

.sxc9pi1zvt14--c2:not([disabled]):hover,
.sxc9pi1zvt14--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primary900);
  background: white;
}

.sxc9pi1zvt14--c2:active {
  color: var(--sx-colors-primary500);
}

.sxc9pi1zvt14--c2[disabled] {
  background: white;
  color: var(--sx-colors-primary900);
}

.sxc9pi11yr1x--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--sx-colors-secondary500);
  background: white;
}

.sxc9pi11yr1x--c2:not([disabled]):hover,
.sxc9pi11yr1x--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-secondary900);
  background: white;
}

.sxc9pi11yr1x--c2:active {
  color: var(--sx-colors-secondary500);
}

.sxc9pi11yr1x--c2[disabled] {
  background: white;
  color: var(--sx-colors-secondary900);
}

<div>
  <button
    class="sxc9pi1 sxc9pi103kze--theme-primary sxc9pi103kze--appearance-solid sxc9pi1fz3et--size-md sxc9pi1lmkcj--isRounded-true sxc9pi1idshx--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxib16r sxib16rmbqqh--size-md sxib16r-yd47z"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;
